[gd_scene load_steps=7 format=3 uid="uid://bws2ji5ixto81"]

[ext_resource type="Script" path="res://UI/Scene/Menu/menu.gd" id="1_vj332"]
[ext_resource type="FontFile" uid="uid://cabwwc8lnsbe7" path="res://UI/Common/pixel-dead.italic.ttf" id="2_rr3bx"]
[ext_resource type="AudioStream" uid="uid://cnh1o32ow33u" path="res://UI/Scene/Sfx/button hover sfx.mp3" id="3_5rmga"]
[ext_resource type="AudioStream" uid="uid://bjisodaamlql7" path="res://UI/Scene/Sfx/button select SFX.mp3.tres" id="4_7nvsa"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iqg46"]
content_margin_left = 20.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hkqut"]
content_margin_left = 20.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vj332")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.396078)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 20.0
offset_right = 1112.0
offset_bottom = 628.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_rr3bx")
theme_override_font_sizes/font_size = 80
text = "Cthulhu 
       Slayer"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 237.0
offset_right = 301.0
offset_bottom = 354.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="VBoxContainer2"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_rr3bx")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxLine_iqg46")
text = "Start"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer2"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_rr3bx")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxLine_hkqut")
text = "Quit"
flat = true
alignment = 0

[node name="Button Hover Sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5rmga")
volume_db = -16.382
autoplay = true

[node name="Game Start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7nvsa")
volume_db = -13.565

[connection signal="focus_entered" from="VBoxContainer2/Start" to="." method="_on_start_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer2/Start" to="." method="_on_start_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer2/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="VBoxContainer2/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer2/Quit" to="." method="_on_quit_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer2/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
